Added node_module prefix example

--- a/styles.less
+++ b/styles.less
@@ -13,6 +13,8 @@
 // This DOES work (note the .less extension)
 // @import 'thisisinnodemodules/one/two/three/four/test.less';
 
+// This DOES work (note the node_modules prefix extension)
+// @import 'node_modules/thisisinnodemodules/one/two/three/four/test.less';
 
 
 //=== Files in the project root
